[gd_scene load_steps=12 format=3 uid="uid://cha332k32v757"]

[ext_resource type="Script" uid="uid://dha7s783f4wo7" path="res://scenes/main_menu/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://cuh2jkqnhbt51" path="res://assets/mainmenuplaceholder.png" id="2_8ln24"]
[ext_resource type="FontFile" uid="uid://dyntogr5amvlx" path="res://assets/fonts/elementary_gothic_bookhand/Elementary_Gothic_Bookhand.otf" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://bt8bd5ivcu7nd" path="res://assets/fonts/libre-baskerville/LibreBaskerville-Regular.ttf" id="3_bqqt6"]
[ext_resource type="PackedScene" uid="uid://8eucll6x06um" path="res://scenes/SceneTransitionRect.tscn" id="4_wu84c"]
[ext_resource type="AudioStream" uid="uid://c1f16vyrxy1op" path="res://sound/music/statuegarden_test.mp3" id="6_3ovsr"]

[sub_resource type="Theme" id="Theme_bqqt6"]
resource_local_to_scene = true
CheckButton/font_sizes/font_size = 16
CheckButton/fonts/font = ExtResource("3_bqqt6")
CheckButton/icons/checked = null
CheckButton/icons/checked_disabled = null
CheckButton/icons/checked_disabled_mirrored = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ln24"]

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("2_ekxnf")
font_size = 76
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 33
shadow_color = Color(0, 0, 0, 0.654902)
shadow_offset = Vector2(6, 6)

[sub_resource type="Theme" id="Theme_wu84c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="main_menu" type="PanelContainer"]
custom_minimum_size = Vector2(1186, 890)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("1_l6cm7")

[node name="SceneTransitionRect" parent="." instance=ExtResource("4_wu84c")]
layout_mode = 2
color = Color(0, 0, 0, 0)
next_scene_path = "uid://tj7j6vpb85h4"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_8ln24")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = SubResource("Theme_bqqt6")
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8ln24")
text = "Insert Title Here"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_wu84c")
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Play Game"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 37

[node name="Sound" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Sound ON"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 37

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="DebugMode" type="Button" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 50)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 20
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
toggle_mode = true
text = "Debug Mode OFF"
icon_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3ovsr")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sound" to="." method="_on_button_sound_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DebugMode" to="." method="_on_debug_mode_toggled"]

[editable path="SceneTransitionRect"]
